<resources>
    <string name="app_name">Krypton</string>
    <string name="btn_add_entry_text">Add Entry</string>
    <string name="btn_remove_entries_text">Remove Selected</string>
    <string name="btn_select_entries_text">Select</string>
    <string name="btn_generate_passwords_text">Generate Password(s)</string>
    <string name="btn_edit_mode_text">Edit</string>

    <!-- Strings for dialog_new_account.xml -->
    <string name="dialog_new_account_edittext_account_name_hint">Account Name</string>

    <!-- Strings for dialog_new_entry_values_input.xml -->
    <string name="dialog_entry_values_input_edittext_entry_name_hint">Entry Name</string>
    <string name="dialog_entry_values_input_edittext_entry_value_hint">Entry Value</string>
    <string name="dialog_entry_values_input_button_password_generator">Password Generator</string>

</resources>