<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <EditText
        android:id="@+id/et_entry_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/dialog_entry_values_input_edittext_entry_name_hint"/>

    <EditText
        android:id="@+id/et_entry_value"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/dialog_entry_values_input_edittext_entry_value_hint"/>

    <Button
        android:id="@+id/btn_password_generator"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/dialog_entry_values_input_button_password_generator"/>

</LinearLayout>