<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountEntryViewer"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <TextView
        android:id="@+id/tvOpenedVaultAccountName"
        android:text="Account Name"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dividerAccountName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/dividerAccountName"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvOpenedVaultAccountName"
        app:layout_constraintBottom_toTopOf="@id/rvEntries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEntries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/dividerRvToButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerAccountName"
    />

    <View
        android:id="@+id/dividerRvToButtons"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/rvEntries"
        app:layout_constraintBottom_toTopOf="@id/btnAddEntry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
        android:id="@+id/btnAddEntry"
        android:text="@string/btn_add_entry_text"
        android:layout_width="0dp"
        android:layout_height="60dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnRemoveEntries"

        app:layout_constraintTop_toBottomOf="@id/dividerRvToButtons"
        app:layout_constraintBottom_toTopOf="@id/btnSelectEntries"

        android:layout_marginTop="8dp"
    />

    <Button
        android:id="@+id/btnRemoveEntries"
        android:text="@string/btn_remove_entries_text"

        android:layout_width="0dp"
        android:layout_height="60dp"

        app:layout_constraintStart_toEndOf="@id/btnAddEntry"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/dividerRvToButtons"
        app:layout_constraintBottom_toTopOf="@id/btnEditMode"

        android:layout_marginTop="8dp"
    />

    <Button
        android:id="@+id/btnSelectEntries"
        android:text="@string/btn_select_entries_text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEditMode"
        app:layout_constraintTop_toBottomOf="@id/btnAddEntry"
        app:layout_constraintBottom_toTopOf="@id/btnGeneratePasswords"
    />

    <Button
        android:id="@+id/btnEditMode"
        android:text="@string/btn_edit_mode_text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toEndOf="@id/btnSelectEntries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRemoveEntries"
        app:layout_constraintBottom_toTopOf="@id/btnGeneratePasswords"
    />

    <Button
        android:id="@+id/btnGeneratePasswords"
        android:text="@string/btn_generate_passwords_text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSelectEntries"
        app:layout_constraintBottom_toBottomOf="parent"
   />


</androidx.constraintlayout.widget.ConstraintLayout>