<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VaultAccountEntryViewer"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <TextView
        android:id="@+id/activityEntryViewerTextViewAccountName"
        android:text="Account Name"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activityEntryViewerHorizontalDivider1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/activityEntryViewerHorizontalDivider1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="50dp"
        app:layout_constraintTop_toBottomOf="@id/activityEntryViewerTextViewAccountName"
        app:layout_constraintBottom_toTopOf="@id/activityEntryViewerRecyclerViewEntries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activityEntryViewerRecyclerViewEntries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/activityEntryViewerHorizontalDivider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityEntryViewerHorizontalDivider1"
    />

    <View
        android:id="@+id/activityEntryViewerHorizontalDivider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/activityEntryViewerRecyclerViewEntries"
        app:layout_constraintBottom_toTopOf="@id/activityEntryViewerButtonAddEntry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
        android:id="@+id/activityEntryViewerButtonAddEntry"
        android:text="@string/btn_add_entry_text"
        android:layout_width="0dp"
        android:layout_height="60dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activityEntryViewerButtonRemoveEntries"

        app:layout_constraintTop_toBottomOf="@id/activityEntryViewerHorizontalDivider2"
        app:layout_constraintBottom_toTopOf="@id/activityEntryViewerButtonSelectEntries"

        android:layout_marginTop="8dp"
    />

    <Button
        android:id="@+id/activityEntryViewerButtonRemoveEntries"
        android:text="@string/btn_remove_entries_text"

        android:layout_width="0dp"
        android:layout_height="60dp"

        app:layout_constraintStart_toEndOf="@id/activityEntryViewerButtonAddEntry"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/activityEntryViewerHorizontalDivider2"
        app:layout_constraintBottom_toTopOf="@id/activityEntryViewerButtonEditMode"

        android:layout_marginTop="8dp"
    />

    <Button
        android:id="@+id/activityEntryViewerButtonSelectEntries"
        android:text="@string/btn_select_entries_text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activityEntryViewerButtonEditMode"
        app:layout_constraintTop_toBottomOf="@id/activityEntryViewerButtonAddEntry"
        app:layout_constraintBottom_toTopOf="@id/activityEntryViewerButtonGeneratePasswords"
    />

    <Button
        android:id="@+id/activityEntryViewerButtonEditMode"
        android:text="@string/btn_edit_mode_text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toEndOf="@id/activityEntryViewerButtonSelectEntries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityEntryViewerButtonRemoveEntries"
        app:layout_constraintBottom_toTopOf="@id/activityEntryViewerButtonGeneratePasswords"
    />

    <Button
        android:id="@+id/activityEntryViewerButtonGeneratePasswords"
        android:text="@string/btn_generate_passwords_text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityEntryViewerButtonSelectEntries"
        app:layout_constraintBottom_toBottomOf="parent"
   />


</androidx.constraintlayout.widget.ConstraintLayout>